# axum-leptos-htmx-wc

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TEMPLATE_USAGE.md  bootstrap.sh  cargo-generate.toml  clippy.toml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  example.config.yaml  mcp.json  output.txt  output_m3.txt  output_m6.txt  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  test_config.yaml  tsconfig.json
.claude/: settings.local.json
.github/workflows/: ci.yml  template-cleanup.yml
docs/: ARCHITECTURE.md  CLAUDE_ASSESSMENT.md  CODEX_ASSESSMENT.md  CONVERSATION_MEMORY.md  GPT5_COMPATIBILITY.md  IMPLEMENTATION_SUMMARY.md  LOGGING.md  PROVIDER_CONFIGURATION.md  SSE_VERIFICATION.md  STATE_MANAGEMENT.md  STREAMING_DEBOUNCE_FIX.md  STREAMING_FLICKER_FIX.md  STREAMING_VERIFICATION.md  THEME_AND_MOBILE.md  TOKEN_TRACKING.md  TOOL_CALL_UI_FIX.md  TOOL_NAMING.md  UI_DESIGN.md  configuration.md
docs/full-implementation/: A2UI + AG-UI.md  PMPO, Universal Agent Runtime, and the LLM Provider Framework.md  Universal Agent Runtime.md  VISION.md  universal_agent_runtime_and_agent_artifact_specification.md
docs/htmx/: Accordion-shadcnui-structure-HTMX-HTMLX-artifact.html  Alert-HTMX-Variations-single-file.html  Aspect-Ratio-HTMX-Variations-single-file.html  Button-Group-HTMX-Web-Componentsready.html  Calendar-2month-layout-improved-HTMX-single-file.html  Calendar-shadcnlike-HTMX-single-file.html  Combobox-HTMX-Web-Componentsready.html  Data-Table-HTMX-singlefile-SortingFilteringPaginationSelectionRow-Actions.html  Drawer-Variations-LeftRightTopBottom-HTMX-HTMLX-Artifact.html  HTMX-208-shadcnlike-Button-Grid-All-Variants.html  HTMX-208-shadcnlike-Forms-Token-Palette-LightDark.html  HTMX-Context-Menu-single-file-all-variations.html  HTMX-Field-Demo-Token-datatheme.html  HTMX-Markdown-Editor-Pluginready-Leptosfriendly.html  HTMX-Sheet-shadcnlike-Demo.html  HTMX-Web-Component-Scroll-Area.html  Hover-Card-HTMX-Variations-single-file.html  Isolated-HTMX-shadcnlike-Card-Prototype.html  Navigation-Menu-HTMX-Explicit-hxget.html  Navigation-Menu-shadcnlike-HTMX-single-file.html  Progress-Variations-HTMX-Web-Component-ready.html  Prometheus-Flat-Material-3-Zones-HTMX-Shell.html  Sidebar-shadcnui-structure-HTMLX-artifact.html  alert-htmx-variations.html  aspect-ratio-htmx-variations.html  checkbox-wc-htmx-variations.html  command-01-core.html  command-02-keyboard-a11y.html  command-03-groups-nesting.html  command-04-server-fragments-oob.html  command-05-feedback-states.html  hover-card-htmx-variations.html  label-wc-htmx-variations.html  shadcnlike-Alert-Dialog-HTMX-Web-Componentsready.html  shadcnlike-Badges-HTMX-208-Full-Variant-Set.html  shadcnlike-Dialog-HTMX-Web-Componentsready.html  shadcnui-Carousel-HTMX-Variations-single-file.html  shadcnui-Sonner-HTMX-Variations-single-file.html  shadcnui-Textarea-HTMX-Variations-single-file.html
docs/htmx/sidebar-blocks/: README.md  sidebar-01-app-shell.html  sidebar-01-wc-htmx.html  sidebar-02-sticky-header.html  sidebar-02-wc-htmx-sticky-header.html  sidebar-03-icon-collapse.html  sidebar-04-search-header.html  sidebar-05-compact.html  sidebar-06-grouped-sections.html  sidebar-07-badges.html  sidebar-08-user-footer.html  sidebar-09-mini-rail.html  sidebar-10-floating.html  sidebar-11-inset.html  sidebar-12-collapsible-sections.html  sidebar-13-secondary-panel.html  sidebar-14-right-sidebar.html  sidebar-14-wc-htmx-right-sidebar.html  sidebar-15-dual-sidebars.html  sidebar-15-wc-htmx-dual-sidebars.html  sidebar-16-minimal.html
migrations/: 20251225000000_init_uar.sql  20251226000000_create_agents.sql  20251226000001_create_memories.sql  20251226100000_knowledge_bases_v2.sql
migrations/surrealdb/: schema.surql
plans/: htmx-streaming-architecture-fix.md  implementation-roadmap.md  implementation-specifications.md  streaming-verification-checklist.md
playwright-report/: index.html
scripts/: download-fonts.sh
sdks/python/: README.md  pyproject.toml
sdks/python/src/axum_leptos_htmx_wc_sdk/: __init__.py  client.py  types.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: client.rs  error.rs  lib.rs  runtime.rs  types.rs
sdks/typescript/: README.md  package.json
sdks/typescript/src/: index.ts
skills/db-skill/: SKILL.md
skills/sample-skill/: SKILL.md
src/: config.rs  lib.rs  main.rs  normalized.rs  server.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/llm/: chat_completions.rs  mod.rs  orchestrator.rs  provider.rs  responses.rs
src/mcp/: config.rs  mod.rs  registry.rs  stdio_client.rs  types.rs
src/session/: mod.rs  thread.rs
src/uar/: defaults.rs  mod.rs
src/uar/api/: adapters.rs  ingest.rs  knowledge.rs  memory.rs  mod.rs  routes.rs  sse.rs  upload.rs
src/uar/domain/: artifact.rs  context.rs  events.rs  graph.rs  knowledge.rs  matching.rs  memory.rs  mod.rs  runs.rs  skills.rs  tools.rs
src/uar/file_processing/: factory.rs  kreuzberg.rs  local.rs  mistral.rs  mod.rs  provider.rs  unstructured.rs
src/uar/persistence/: mod.rs
src/uar/rag/: chunking.rs  ingest.rs  ingestion_worker.rs  mod.rs  retrieval.rs
src/uar/runtime/: manager.rs  mod.rs  skills.rs
src/uar/security/: claims.rs  middleware.rs  mod.rs  rate_limit.rs
src/uar/telemetry/: mod.rs
src/uar/tools/: memory.rs
src/ui/: app.rs  mod.rs
src/ui/chat/: header.rs  input_area.rs  message_list.rs  mod.rs  shell.rs
src/ui/components/: avatar.rs  badge.rs  button.rs  card.rs  icons.rs  input.rs  mod.rs  scroll_area.rs  separator.rs
static/: about.html  app.css  index.html  main.js
tests/: config_integration.rs  knowledge_base_integration.rs  uar_integration.rs
tests/integration/: chat.spec.ts
tools/project-init/: Cargo.toml  README.md
tools/project-init/src/: main.rs
web/: main.ts
web/stores/: conversation-store.ts  migrations.ts  pglite-store.ts
web/types/: chat.ts  database.ts  events.ts
web/utils/: clipboard.ts  html.ts  markdown.ts  model-info.ts  sse.ts  streaming-optimizer.ts  token-counter.ts  uuid.ts
(+31 files in other folders)
