[package]
name = "axum-leptos-htmx-wc"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "axum-leptos-htmx-wc"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.8"
tower-http = { version = "0.6.8", features = ["fs", "cors"] }

# Leptos SSR
leptos = { version = "0.8.14", features = ["csr", "ssr"] }
leptos_dom = "0.8.7"
leptos_macro = "0.8.14"
leptos_router = { version = "0.8.11", features = ["ssr"] }
leptos_axum = "0.8.7"

# Async runtime
tokio = { version = "1", features = ["full", "process"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }

# MCP client
rmcp = { version = "0.12.0", features = [
  "client",
  "reqwest",
  "transport-child-process",
  "transport-streamable-http-client-reqwest"
] }

# Utilities
url = "2.5.7"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15.7"
clap = { version = "4.0", features = ["derive"] }

# Performance (M-MIMALLOC-APPS)
mimalloc = "0.1"

# Observability (M-LOG-STRUCTURED)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0.100"

# Lints (M-STATIC-VERIFICATION)
[lints.rust]
missing_debug_implementations = "warn"
redundant_imports = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Restriction lints for better code quality
clone_on_ref_ptr = "warn"
empty_drop = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"

# Allow some pedantic lints that are too noisy
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
