[package]
name = "axum-leptos-htmx-wc"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "axum-leptos-htmx-wc"
path = "src/main.rs"

[dev-dependencies]
anyhow = "1.0"
axum-test = "18.4.1"
serial_test = "3.0"
tokio = { version = "1.0", features = ["full", "test-util"] }
tower = { version = "0.5.2", features = ["util"] }

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace", "timeout"] }



# Async runtime
tokio = { version = "1", features = ["full", "process"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.147"

# Async utilities
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }

# MCP client
rmcp = { version = "0.12.0", features = [
  "client",
  "reqwest",
  "transport-child-process",
  "transport-streamable-http-client-reqwest"
] }

# Utilities
url = "2.5.7"
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15.7"
clap = { version = "4.0", features = ["derive", "env"] }

# Performance (M-MIMALLOC-APPS)
mimalloc = "0.1"

# Observability (M-LOG-STRUCTURED)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0.100"
axum-extra = { version = "0.12.3", features = ["typed-routing", "typed-header"] }
tower = "0.5.2"
tokio-stream = { version = "0.1.17", features = ["net", "sync"] }
serde_yaml = "0.9.34"
fastembed = "5.5.0"
tiktoken-rs = "0.9.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "migrate"] }
pgvector = { version = "0.4.1", features = ["sqlx"] }
text-splitter = "0.28.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5.0"
jsonwebtoken = "9.3.0"
tracing-opentelemetry = "0.32.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
config = "0.15.19"
surrealdb = { version = "2.4.0", features = ["kv-surrealkv", "protocol-ws"] }

# Lints (M-STATIC-VERIFICATION)
[lints.rust]
missing_debug_implementations = "warn"
redundant_imports = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Restriction lints for better code quality
clone_on_ref_ptr = "warn"
empty_drop = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
undocumented_unsafe_blocks = "warn"

# Cargo lints (useful in crates.io-bound projects) are noisy for a reference repo.
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# Allow some pedantic lints that are too noisy
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
