[project]
name = "axum-leptos-htmx-wc-sdk"
version = "0.1.0"
description = "Python SDK for axum-leptos-htmx-wc - HTTP client for the agentic AI application"
authors = [{ name = "Developer", email = "dev@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Prometheus-AGS/axum-leptos-htmx-wc"
Repository = "https://github.com/Prometheus-AGS/axum-leptos-htmx-wc"
Documentation = "https://github.com/Prometheus-AGS/axum-leptos-htmx-wc#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axum_leptos_htmx_wc_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
