[package]
name = "axum-leptos-htmx-wc-sdk"
version = "0.1.0"
edition = "2024"
description = "Rust SDK for axum-leptos-htmx-wc - HTTP client and embeddable runtime"
authors = ["Developer <dev@example.com>"]
repository = "https://github.com/Prometheus-AGS/axum-leptos-htmx-wc"
license = "MIT OR Apache-2.0"
keywords = ["sdk", "client", "api", "llm", "agent"]
categories = ["api-bindings", "web-programming"]

[features]
default = ["http-client"]
http-client = ["dep:reqwest", "dep:tokio-stream", "dep:eventsource-client"]
embedded = ["dep:axum-leptos-htmx-wc"]
full = ["http-client", "embedded"]

[dependencies]
# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
url = "2.5"

# HTTP client mode
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
tokio-stream = { version = "0.1", optional = true }
eventsource-client = { version = "0.13", optional = true }

# Embedded mode - re-export the core crate
axum-leptos-htmx-wc = { path = "../..", optional = true }

[dev-dependencies]
tokio-test = "0.4"
