[package]
name = "project-init"
version = "0.1.0"
edition = "2024"
description = "Interactive TUI tool for initializing projects from the template"
authors = ["Developer <dev@example.com>"]
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "project-init"
path = "src/main.rs"

[dependencies]
# TUI prompts
inquire = "0.7"

# Terminal styling
console = "0.15"
indicatif = "0.17"

# File system operations
walkdir = "2.5"

# Pattern matching and replacement
regex = "1.11"

# Configuration parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"
